docs: Changed CreateOpeningResponse to UpdateOpeningResponse
